# claude-code-trees

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: advanced_orchestration.py  basic_usage.py  orchestration.py  parallel_tasks.py
scripts/: release.sh
src/claude_code_trees/: __init__.py  claude_instance.py  cli.py  config.py  database.py  orchestrator.py  session.py  utils.py  worktree.py
tests/: __init__.py  test_claude_instance.py  test_orchestrator.py  test_session.py  test_worktree.py
